fix(SelectTree): Removes align center
fix #508

--- a/src/components/selectTree/SelectTree.styl
+++ b/src/components/selectTree/SelectTree.styl
@@ -96,7 +96,6 @@
     font-weight: normal;
     box-shadow: 0 0 0 200px transparent;
     padding: 0 12px;
-    text-align: center;
 
   .treeNode
     border-bottom: 1px solid #ccc;
